dapr-distributed-calendar/jaeger/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-aws-ingress
  namespace: observability
spec:
  ingressClassName: nginx-class
  rules:
    - host: jaeger.mtheuermann.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simplest-query
              port:
                number: 16686
